First pass: simplified homepage

--- a/source/_partials/search_box.html
+++ b/source/_partials/search_box.html
@@ -9,4 +9,4 @@
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<div><gcse:searchbox-only></gcse:searchbox-only></div>
+<div class="navsearch"><gcse:searchbox-only></gcse:searchbox-only></div>
