--- a/source/_views/default.html
+++ b/source/_views/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<html itemscope itemtype="http://schema.org/Article" class="no-js">
+<html itemscope itemtype="http://schema.org/Article">
 <head>
     <!-- Quickie redirection to https and pantheon.io -->
     <script type="text/javascript">
