--- a/source/_views/taxon.html
+++ b/source/_views/taxon.html
@@ -103,7 +103,7 @@
     <![endif]-->
     {% include("navbar.html") %}
     <!-- container -->
-    <div class="container-fluid" style="margin-top:30px;">
+    <div class="container-fluid">
       <article>
           <div class="article container-fluid">
               <div class="col-md-9">
