--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -14,6 +14,26 @@
       $("[rel=popover]").popover({'trigger':'hover'});
   });
   </script>
+  <script type="text/javascript">
+  function setActive() {
+    aObj = document.getElementById('dropmenu').getElementsByTagName('a');
+    for(i=0;i<aObj.length;i++) {
+      if(document.location.href.indexOf(aObj[i].href)>=0 ){
+        aObj[i].className='active-trail';
+        if(/\/guides.*/.test(aObj[i].href)>=1) {
+          $('#docs').removeClass('active-trail');
+        }
+        if(/\/contributor.*/.test(aObj[i].href)>=1) {
+          $('#docs').removeClass('active-trail');
+        }
+        if(/\/changelog.*/.test(aObj[i].href)>=1) {
+          $('#docs').removeClass('active-trail');
+        }
+      }
+    }
+  }
+  window.onload = setActive;
+  </script>
 
   <!-- Marketo Munchkin -->
   <script type="text/javascript">
