--- a/source/docs.html
+++ b/source/docs.html
@@ -6,94 +6,46 @@ use:
 - docs_categories
 - docs_tags
 ---
-<div class="article container-fluid">
-  <div class="jumbotron" style="padding-left:30px;padding-bottom:0px;">
-  <h1>Pantheon Docs</h1>
-</div>
-  <div class="col-md-12">
-    <!--Featured Docs-->
-    <div class="col-md-4 featured_docs">
-    <h2><i class="fa fa-share-alt"></i> Featured</h2>
-    <p>
-      <a href="/docs/domains">Domains and DNS</a><br>
-      <a href="/docs/pantheon-workflow">Using the Pantheon Workflow</a><br>
-      <a href="/docs/new-relic">New Relic Pro</a><br>
-      <a href="/docs/scope-of-support">Scope of Support</a><br>
-      <a href="/docs/going-live">Going Live</a><br>
-      <a href="/docs/tags/featured"><small>See All ›</small></a>
-    </p>
-  </div>
-  <!--Getting Started Featured Docs-->
-  <div class="col-md-4 featured_docs">
-  <h2><i class="fa fa-tachometer"></i> Getting Started</h2>
-  <p>
-    <a href="/docs/required-reading">Required Reading: Essential Pantheon Documentation</a><br>
-    <a href="/docs/platform-considerations">Platform Considerations</a><br>
-    <a href="/docs/migrate">Migrate Sites to Pantheon</a><br>
-    <a href="/docs/local-development">Local Development</a><br>
-    <a href="/docs/application-containers">All About Application Containers</a><br>
-    <a href="/docs/tags/getting-started"><small>See All ›</small></a>
+      <div class="col-md-9" style="text-align:center;width:100%;margin-bottom:50px;">
 
-</p>
-</div>
-  <!--Developing Featured Docs-->
-  <div style="border:1px;" class="col-md-4 featured_docs">
-    <h2><i class="fa fa-code-fork"></i> Developing</h2>
-    <p>
-      <a href="/docs/mysql-access">Accessing MySQL Databases</a><br>
-      <a href="/docs/redirects">Redirect Incoming Requests</a><br>
-      <a href="/docs/git-faq">Git FAQs</a><br>
-      <a href="/docs/enable-https">Enable Secure HTTPS Communication</a><br>
-      <a href="/docs/terminus">Terminus, the Pantheon Command-Line Interface (CLI)</a><br>
-      <a href="/docs/categories/developing"><small>See All ›</small></a>
-    </p>
+      <div class="jumbotron" style="padding:0px;">
+      <h1 style="text-align:center;font-size:48px;">Pantheon Documentation</h1>
+    </div>
+    <div class="col-md-3" style="background-color:#dde5e7;margin:20px;border: 1px solid #fff;text-align:center;float:none;display:inline-block;">
+      <h2>Getting Started</h2>
+        <i class="fa fa-lightbulb-o " style="color:#44525e;margin-top:20px;font-size:8em" aria-hidden="true"></i>
+        <br>
+        <a href="/docs/tags/getting-started" class="btn btn-primary">Browse Docs</a>
+    </div>
+    <div class="col-md-3" style="background-color:#dde5e7;margin:20px;border: 1px solid #fff;text-align:center;float:none;display:inline-block;">
+      <h2>WordPress</h2>
+        <i class="fa fa-wordpress" style="color:#44525e;margin-top:20px;font-size:8em;" aria-hidden="true"></i>
+        <br>
+        <a href="/docs/tags/getting-started" class="btn btn-primary">Browse Docs</a>
+    </div>
+    <div class="col-md-3" style="background-color:#dde5e7;margin:20px;border: 1px solid #fff;text-align:center;float:none;display:inline-block;">
+      <h2>Drupal</h2>
+        <i class="fa fa-drupal " style="color:#44525e;margin-top:20px;font-size:8em" aria-hidden="true"></i>
+        <br>
+        <a href="/docs/tags/getting-started" class="btn btn-primary">Browse Docs</a>
+    </div>
+    </div>
+    <div class="col-md-12" style="text-align:center;width:100%;">
+      <div class="col-md-9" style="padding-bottom:15px;text-align:left;float:none;display:inline-block;margin-top:50px;margin-bottom:50px;">
+      <h2 style="margin:0;font-size:32px;padding-left:15px;">Top Articles</h2>
+        <div class="col-md-4" style="float: left;display:inline-block;text-align:left;width: auto;left: 0;">
+          <a href="/docs/migrate"><h4>Migrate Sites to Pantheon</h4></a>
+          <a href="/docs/domains"><h4>Domains and DNS</h4></a>
+          <a href="/docs/settings-php"><h4>Configuring Settings.php</h4></a>
+          <a href="/docs/git-faq"><h4>Git FAQs</h4></a>
+          <a href="/docs/redis"><h4>Redis as a Caching Backend</h4></a>
+        </div>
+        <div class="col-md-4" style="float: right;display:inline-block;text-align:left;width: auto;">
+          <a href="/docs/drush"><h4>Drupal Drush Command-Line Utility</h4></a>
+          <a href="/docs/redirects"><h4>Redirect Incoming Requests</h4></a>
+          <a href="/docs/terminus"><h4>Terminus, the Pantheon Command-Line Interface (CLI)</h4></a>
+          <a href="/docs/pantheon-workflow"><h4>Using the Pantheon Workflow</h4></a>
+          <a href="/docs/ssh-keys"><h4>Generating and Adding SSH Keys</h4></a>
+        </div>
+    </div>
   </div>
-  <!--Managing Featured Docs-->
-  <div class="col-md-4 featured_docs">
-    <h2><i class="fa fa-cogs"></i> Managing</h2>
-    <p>
-      <a href="/docs/ssh-keys">Generating and Adding SSH Keys</a><br>
-      <a href="/docs/organizations">Organizations</a><br>
-      <a href="/docs/custom-upstream">Create a Custom Upstream</a><br>
-      <a href="/docs/multidev">Multidev</a><br>
-      <a href="/docs/team-management">Team Management</a><br>
-      <a href="/docs/categories/managing"><small>See All ›</small></a>
-    </p>
-  </div>
-  <!--WordPress Featured Docs-->
-  <div class="col-md-4 featured_docs">
-    <h2><i class="fa fa-wordpress"></i> WordPress</h2>
-    <p>
-      <a href="/docs/wp-config-php">Configuring wp-config.php</a><br>
-      <a href="/docs/wordpress-export">Export an Existing WordPress Site</a><br>
-      <a href="/docs/wp-cfm">WordPress Configuration Management (WP-CFM)</a><br>
-      <a href="/docs/wordpress-sessions">WordPress and PHP Sessions</a><br>
-      <a href="/docs/wordpress-redis">Installing Redis on WordPress</a><br>
-      <a href="/docs/categories/wordpress"><small>See All ›</small></a>
-    </p>
-  </div>
-  <!--Drupal Featured Docs-->
-  <div class="col-md-4 featured_docs">
-    <h2><i class="fa fa-drupal"></i> Drupal</h2>
-    <p>
-      <a href="/docs/settings-php">Configuring Settings.php</a><br>
-      <a href="/docs/drupal-launch-check">Launch Check - Drupal Performance and Configuration Analysis</a><br>
-      <a href="/docs/drush">Drupal Drush Command-Line Utility</a><br>
-      <a href="/docs/drupal-cache">Drupal Performance and Varnish Caching Settings</a><br>
-      <a href="/docs/drupal-export">Export an Existing Drupal Site</a><br>
-      <a href="/docs/categories/drupal"><small>See All ›</small></a>
-    </p>
-  </div>
-  <!--Tags-->
-  <div class="col-md-4 featured_docs">
-    <a href="/docs/tags"><h2><i class="fa fa-tags"></i> View All Tags</h2></a>
-  </div>
-  <!--Categories-->
-  <div class="col-md-4 featured_docs">
-    <a href="/docs/categories"><h2><i class="fa fa-folder"></i> View All Categories</h2></a>
-  </div>
-  <!--All Docs-->
-  <div class="col-md-4 featured_docs">
-    <a href="/docs/list"><h2><i class="fa fa-list"></i> View All Docs</h2></a>
-  </div>
-</div>
