Add popover tooltip in favor of footnote

--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -9,6 +9,12 @@
   <script src="/docs/assets/js/src/application.js"></script>
   <script src="/docs/assets/js/jquery.tocify.js"></script>
   <script src="//www.google-analytics.com/analytics.js"></script>
+  <script src="/docs/assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script>
+  $(document).ready(function() {
+      $("[rel=popover]").popover({'trigger':'hover'});
+  });
+  </script>
 
   <!-- Marketo Munchkin -->
   <script type="text/javascript">
