--- a/source/_views/doc.html
+++ b/source/_views/doc.html
@@ -35,6 +35,8 @@
                       <a href="{{ site.url }}/tags/{{ tag|url_encode(true) }}"><small>Getting Started</small></a>{% if not loop.last %}<small>, </small>{% endif %}
                     {% elseif tag == "drupal-8" %}
                       <a href="{{ site.url }}/tags/{{ tag|url_encode(true) }}"><small>Drupal 8</small></a>{% if not loop.last %}<small>, </small>{% endif %}
+                    {% elseif tag == "wordpress-site-networks" %}
+                      <a href="{{ site.url }}/tags/{{ tag|url_encode(true) }}"><small>WordPress Site Networks</small></a>{% if not loop.last %}<small>, </small>{% endif %}
                     {% else %}
                       <a href="{{ site.url }}/tags/{{ tag|url_encode(true) }}"><small>{{ tag|capitalize }}</small></a>{% if not loop.last %}<small>, </small>{% endif %}
                     {% endif %}
