Incorporate feedback from Natalie/Kim

--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -59,8 +59,10 @@
               </ul>
     </div>
 </div>
-<div style="background:#44525e;padding:15px;" class=" form-group has-feedback">
-    {% include("search_box.html") %}
-    <span class="glyphicon glyphicon-search form-control-feedback" aria-hidden="true"></span>
-    <span id="docsearchicon" class="sr-only">(search)</span>
+<div class="navsearch-container">
+  <div class="navsearch form-group has-feedback">
+      {% include("search_box.html") %}
+      <span class="glyphicon glyphicon-search form-control-feedback" aria-hidden="true"></span>
+      <span id="docsearchicon" class="sr-only">(search)</span>
+  </div>
 </div>
