--- a/source/_partials/search_box.html
+++ b/source/_partials/search_box.html
@@ -11,6 +11,6 @@
 </script>
   <form id="searchform" action="/docs/search" accept-charset="UTF-8" enctype="application/x-www-form-urlencoded">
     <div>
-      <input type="search" placeholder="Search Pantheon Docs"value="" name="term" id="term" autocomplete="on" />
+      <input type="search" placeholder="Search Pantheon Docs"value="" name="term" id="piodocsearch" autocomplete="on" />
     </div>
   </form>
