Refactor Changelog index - pagination
- Show 3 posts
- Pagination
- Update deployment pipeline to automate URL normalization for paginated URLs (Remove .html from /docs/changelog/page/2.html - Sculpin bug workaround)

--- a/source/_views/post.html
+++ b/source/_views/post.html
@@ -1,7 +1,10 @@
 {% extends "default" %}
 {% block content_wrapper %}
 <article>
-    <div class="article changelog-resp container-fluid">
+    <div class="article container-fluid">
+      <div style="margin-top:10px;" class="col-md-12">
+      <a style="text-decoration:none;" href="/docs/changelog"><span style="font-size:20px;">&#171;</span> Back to all Changelogs</a>
+    </div>
         <div class="col-md-9">
             <header>
                 <h1>Pantheon Changelog<br /><small>{{page.title}}</small></h1>
