--- a/source/docs.html
+++ b/source/docs.html
@@ -146,6 +146,6 @@ use:
   </div>
   <div class="float-foot">
     <div style="margin-top:20px;">
-      Review <a href="/docs/changelogs">Changelogs</a> for the latest platform improvements and documentation.
+      Review <a href="/docs/changelog">Changelogs</a> for the latest platform improvements and documentation.
     </div>
   </div>
