Add padding to wp/drupal containers, mobile optimizations, css tweaks

--- a/source/docs.html
+++ b/source/docs.html
@@ -71,7 +71,7 @@ use:
       </div>
       <div class="col-md-6 col-xs-12 pio-category-container">
         <a href="/docs/categories/wordpress">
-          <div class="pio-cat-container-inner" style="background:#1794C7;color:#fff;">
+          <div class="pio-cat-container-inner" style="padding: 10px 0;background:#1794C7;color:#fff;">
             <span style="display:inline-block;vertical-align:middle;">
               <svg width="80px" height="80px" viewBox="53 51 103 106" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <!-- Generator: Sketch 39 (31667) - http://www.bohemiancoding.com/sketch -->
@@ -89,7 +89,7 @@ use:
       </div>
       <div class="col-md-6 col-xs-12 pio-category-container">
         <a href="/docs/categories/drupal">
-          <div class="pio-cat-container-inner" style="background:#1794C7;color:#fff;">
+          <div class="pio-cat-container-inner" style="padding: 10px 0;background:#1794C7;color:#fff;">
             <span style="display:inline-block;vertical-align:middle;">
               <svg width="80px" height="80px" viewBox="49 46 100 118" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <!-- Generator: Sketch 39 (31667) - http://www.bohemiancoding.com/sketch -->
@@ -105,7 +105,7 @@ use:
           </div>
         </a>
       </div>
-      <div class="col-md-12">
+      <div class="col-md-12 col-sm-12 col-xs-12">
         <hr>
       </div>
       <div class="col-md-6 col-sm-6 col-xs-12 ">
@@ -127,9 +127,9 @@ use:
              </div>
            </div>
         </div>
-        <div class="col-md-6 col-xs-12 col-sm-6" style="padding-right:0px;margin-bottom:10px;">
+        <div class="col-md-6 col-xs-12 col-sm-6" style="padding-left:0px;margin-bottom:10px;">
           <div class="pio-category-container-inner" style="background:#EEF2F3">
-            <div class="col-md-6 col-xs-12 col-sm-6 pio-category-container" style="margin-bottom:10px;border-right:solid 1px #bdbdbd;">
+            <div id="powerusers" class="col-md-6 col-xs-12 col-sm-6 pio-category-container" style="margin-bottom:10px;border-right:solid 1px #bdbdbd;">
             <h2 style="font-size:18px;margin-top:0px;margin-bottom:0px;text-align:left;">Power Users</h2>
               <p style="font-size:14px;text-align:left;margin-bottom:0px;">A community for developers to share ideas, insights, and get Pantheon “insider info”.</p>
               <div style="margin-top:0px;text-align:center"><a href="https://groups.google.com/a/pantheon.io/forum/#!forum/power-users" class="btn-primary btn">Join Now</a></div>
@@ -137,7 +137,7 @@ use:
               <div class="col-md-6 col-xs-12 col-sm-6 pio-category-container" style="margin-bottom:10px;">
                 <h2 style="font-size:18px;margin-top:0px;margin-bottom:0px;text-align:left;">Contribute</h2>
                   <p style="font-size:14px;text-align:left;margin-bottom:0px;">Help us create relevant and useful content for developers like yourself.</p>
-                  <div style="margin-top:0px;text-align:center"><a href="https://groups.google.com/a/pantheon.io/forum/#!forum/power-users" class="btn-primary btn">Learn More</a></div>
+                  <div style="margin-top:0px;text-align:center"><a href="https://github.com/pantheon-systems/documentation/blob/master/CONTRIBUTING.md" class="btn-primary btn">Learn More</a></div>
               </div>
             </div>
         </div>
