Move Drupal / WP to top row; 80% width

--- a/source/docs.html
+++ b/source/docs.html
@@ -11,8 +11,44 @@ use:
     <div class="jumbotron" style="padding:0px;">
       <h1 style="margin-top:20px;margin-bottom:10px;text-align:center;font-size:48px;">Pantheon Documentation</h1>
     </div>
-    <div class="container-fluid" style="margin-left:0px;margin-right:0px;">
-      <div class="col-sm-4 col-md-4 pio-category-container" style="text-align:center;margin-top:20px;">
+      <div class="container-fluid" style="width:80%;">
+      <div class="col-md-6 col-xs-12 pio-category-container">
+        <a href="/docs/categories/wordpress">
+          <div class="pio-cat-container-inner" style="background:#1794C7;color:#fff;">
+            <span style="display:inline-block;vertical-align:middle;">
+              <svg width="80px" height="80px" viewBox="53 51 103 106" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <!-- Generator: Sketch 39 (31667) - http://www.bohemiancoding.com/sketch -->
+                <desc>Created with Sketch.</desc>
+                <defs></defs>
+                <path d="M104,52 C75.8786,52 53,75.3248307 53,103.997914 C53,132.670998 75.8786,156.001028 104,156.001028 C132.1214,156.001028 155,132.670998 155,103.997914 C155,75.3248307 132.1214,52 104,52 L104,52 Z M58.1459,103.997914 C58.1459,97.2196472 59.5739,90.7845835 62.1188,84.9709261 L83.99015,146.07413 C68.6927,138.497655 58.1459,122.502297 58.1459,103.997914 L58.1459,103.997914 Z M104,150.754177 C99.49925,150.754177 95.15405,150.08077 91.046,148.848358 L104.8058,108.087755 L118.8971,147.459944 C118.99145,147.688746 119.10365,147.901948 119.22605,148.10215 C114.4601,149.812967 109.3397,150.754177 104,150.754177 L104,150.754177 Z M110.3189,82.0770974 C113.078,81.928896 115.5668,81.6350931 115.5668,81.6350931 C118.03775,81.3360901 117.74705,77.6336535 115.27355,77.781855 C115.27355,77.781855 107.84795,78.3746608 103.05395,78.3746608 C98.5481,78.3746608 90.97715,77.781855 90.97715,77.781855 C88.50365,77.6336535 88.2155,81.4842916 90.68645,81.6350931 C90.68645,81.6350931 93.0248,81.928896 95.49575,82.0770974 L102.6383,102.034895 L92.6015,132.720398 L75.90665,82.0770974 C78.6683,81.928896 81.15455,81.6350931 81.15455,81.6350931 C83.62295,81.3360901 83.3297,77.6336535 80.8613,77.781855 C80.8613,77.781855 73.4357,78.3746608 68.63915,78.3746608 C67.7798,78.3746608 66.7649,78.3538606 65.6888,78.3174603 C73.88705,65.6267348 87.9809,57.2468519 104,57.2468519 C115.93655,57.2468519 126.80465,61.9008979 134.9621,69.5215733 C134.76575,69.5085731 134.57195,69.4825729 134.36795,69.4825729 C129.86465,69.4825729 126.6695,73.4840125 126.6695,77.781855 C126.6695,81.6350931 128.84975,84.8929253 131.1728,88.7461634 C132.917,91.8609942 134.95445,95.8598337 134.95445,101.639691 C134.95445,105.64113 133.44485,110.284776 131.46605,116.75364 L126.89135,132.335594 L110.3189,82.0770974 L110.3189,82.0770974 Z M144.23645,81.5700924 C147.8141,88.2287583 149.85155,95.8702338 149.85155,103.997914 C149.85155,121.246485 140.6843,136.305834 127.052,144.407514 L141.0566,103.121706 C143.6729,96.4526396 144.545,91.1199869 144.545,86.37754 C144.545,84.6563229 144.4328,83.0573071 144.23645,81.5700924 L144.23645,81.5700924 Z" id="Imported-Layers" stroke="none" fill="#FFFFFF" fill-rule="evenodd"></path>
+              </svg>
+            </span>
+            <span style="display:inline-block;vertical-align:middle;margin-left:15px;text-align:left;">
+              <h2 style="font-size:18px;margin-top:15px;margin-bottom:0px;">WordPress</h2>
+              <p style="font-size:14px;">View all WordPress Docs</p>
+            </span>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-6 col-xs-12 pio-category-container">
+        <a href="/docs/categories/drupal">
+          <div class="pio-cat-container-inner" style="background:#1794C7;color:#fff;">
+            <span style="display:inline-block;vertical-align:middle;">
+              <svg width="80px" height="80px" viewBox="49 46 100 118" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <!-- Generator: Sketch 39 (31667) - http://www.bohemiancoding.com/sketch -->
+                <desc>Created with Sketch.</desc>
+                <defs></defs>
+                <path d="M139.023256,81.3219362 C126.437209,65.3316002 116.230233,63.9791837 109.860465,60.160596 C105.255814,57.4557631 101.034884,52.6825285 95.5860465,46 C95.2023256,49.579926 94.8186047,53.2394058 92.5930233,55.8646849 C88.1418605,61.115243 82.0023256,64.2973994 77.0906977,66.8431245 C64.5046512,73.2869912 50,88.2431264 50,112.188853 C50,123.803724 54.2976744,136.293688 62.4325581,145.840157 C71.1046512,156.102612 84.0744186,163.103356 99.5,163.023802 C113.237209,162.944248 124.595349,158.330121 133.037209,150.692946 C142.937209,141.782908 149,128.736067 149,112.188853 C148.923256,100.017105 145.469767,89.436435 139.023256,81.3219362 L139.023256,81.3219362 Z M125.132558,152.443132 C119.069767,157.69369 102.569767,160.716739 94.8186047,154.03421 C94.0511628,153.397779 94.0511628,152.363578 94.5116279,151.806701 C94.8953488,151.408931 95.2023256,151.170269 95.6627907,150.931608 C96.2,150.613392 96.9674419,150.692946 97.427907,151.170269 C100.497674,154.113764 115.07907,156.579935 123.827907,150.533838 C124.134884,150.295176 124.595349,150.136069 124.902326,150.295176 C125.132558,150.37473 125.362791,150.533838 125.362791,150.852054 C125.439535,151.329377 125.516279,152.045362 125.132558,152.443132 L125.132558,152.443132 Z M104.64186,144.487741 C104.64186,143.692202 104.872093,143.294432 105.409302,142.737555 C108.402326,139.634952 111.625581,137.805212 115.155814,137.884766 C120.834884,138.043874 121.14186,139.396291 122.753488,142.896663 C123.060465,143.612648 122.906977,144.169525 122.676744,144.567295 C122.523256,144.726403 121.909302,145.442388 121.67907,145.442388 C121.14186,145.442388 120.911628,145.203726 120.681395,144.646849 C119.3,141.146477 117.304651,141.066923 114.772093,141.066923 C110.85814,141.066923 109.093023,143.055771 106.790698,145.044618 C106.176744,145.521942 105.639535,145.919711 105.255814,145.521942 C104.948837,145.203726 104.64186,144.805957 104.64186,144.487741 L104.64186,144.487741 Z M135.262791,143.135324 C129.813953,142.737555 123.674419,129.690714 117.688372,129.770268 C109.783721,129.929375 98.1953488,143.692202 85.1488372,143.533094 C78.472093,143.45354 71.3348837,140.907815 71.1046512,130.406699 C70.9511628,121.655769 79.1627907,112.586623 89.6,112.825285 C103.490698,113.1435 110.32093,125.792572 117.304651,125.792572 C124.134884,125.872126 132.116279,114.814132 139.023256,114.655025 C142.706977,114.575471 145.546512,118.234951 145.776744,123.326401 C146.313953,131.04313 141.555814,143.692202 135.262791,143.135324 L135.262791,143.135324 Z" id="Shape" stroke="none" fill="#FFFFFF" fill-rule="evenodd"></path>
+              </svg>
+            </span>
+            <span style="display:inline-block;vertical-align:middle;margin-left:15px;text-align:left;">
+              <h2 style="font-size:18px;margin-top:15px;margin-bottom:0px;">Drupal</h2>
+              <p style="font-size:14px;">View all Drupal Docs</p>
+            </span>
+          </div>
+        </a>
+      </div>
+      <div class="col-sm-4 col-md-4 col-xs-12 pio-category-container">
         <a href="/docs/tags/getting-started">
           <div class="pio-action-container-inner" style="background-color:#EEF2F3;">
             <span style="display:inline-block;vertical-align:middle;">
@@ -33,7 +69,7 @@ use:
           </div>
         </a>
       </div>
-      <div class="col-sm-4 col-md-4 pio-category-container">
+      <div class="col-sm-4 col-md-4 col-xs-12 pio-category-container">
         <a href="/docs/categories/developing">
           <div class="pio-action-container-inner" style="background-color:#EEF2F3;">
             <span style="display:inline-block;vertical-align:middle;">
@@ -51,7 +87,7 @@ use:
           </div>
         </a>
       </div>
-      <div class="col-sm-4 col-md-4 pio-category-container">
+      <div class="col-sm-4 col-md-4 col-xs-12 pio-category-container">
         <a href="/docs/categories/managing">
           <div class="pio-action-container-inner" style="background-color:#EEF2F3;">
             <span style="display:inline-block;vertical-align:middle;">
@@ -69,42 +105,6 @@ use:
           </div>
         </a>
       </div>
-      <div class="col-md-6 col-xs-12 pio-category-container">
-        <a href="/docs/categories/wordpress">
-          <div class="pio-cat-container-inner" style="padding: 10px 0;background:#1794C7;color:#fff;">
-            <span style="display:inline-block;vertical-align:middle;">
-              <svg width="80px" height="80px" viewBox="53 51 103 106" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <!-- Generator: Sketch 39 (31667) - http://www.bohemiancoding.com/sketch -->
-                <desc>Created with Sketch.</desc>
-                <defs></defs>
-                <path d="M104,52 C75.8786,52 53,75.3248307 53,103.997914 C53,132.670998 75.8786,156.001028 104,156.001028 C132.1214,156.001028 155,132.670998 155,103.997914 C155,75.3248307 132.1214,52 104,52 L104,52 Z M58.1459,103.997914 C58.1459,97.2196472 59.5739,90.7845835 62.1188,84.9709261 L83.99015,146.07413 C68.6927,138.497655 58.1459,122.502297 58.1459,103.997914 L58.1459,103.997914 Z M104,150.754177 C99.49925,150.754177 95.15405,150.08077 91.046,148.848358 L104.8058,108.087755 L118.8971,147.459944 C118.99145,147.688746 119.10365,147.901948 119.22605,148.10215 C114.4601,149.812967 109.3397,150.754177 104,150.754177 L104,150.754177 Z M110.3189,82.0770974 C113.078,81.928896 115.5668,81.6350931 115.5668,81.6350931 C118.03775,81.3360901 117.74705,77.6336535 115.27355,77.781855 C115.27355,77.781855 107.84795,78.3746608 103.05395,78.3746608 C98.5481,78.3746608 90.97715,77.781855 90.97715,77.781855 C88.50365,77.6336535 88.2155,81.4842916 90.68645,81.6350931 C90.68645,81.6350931 93.0248,81.928896 95.49575,82.0770974 L102.6383,102.034895 L92.6015,132.720398 L75.90665,82.0770974 C78.6683,81.928896 81.15455,81.6350931 81.15455,81.6350931 C83.62295,81.3360901 83.3297,77.6336535 80.8613,77.781855 C80.8613,77.781855 73.4357,78.3746608 68.63915,78.3746608 C67.7798,78.3746608 66.7649,78.3538606 65.6888,78.3174603 C73.88705,65.6267348 87.9809,57.2468519 104,57.2468519 C115.93655,57.2468519 126.80465,61.9008979 134.9621,69.5215733 C134.76575,69.5085731 134.57195,69.4825729 134.36795,69.4825729 C129.86465,69.4825729 126.6695,73.4840125 126.6695,77.781855 C126.6695,81.6350931 128.84975,84.8929253 131.1728,88.7461634 C132.917,91.8609942 134.95445,95.8598337 134.95445,101.639691 C134.95445,105.64113 133.44485,110.284776 131.46605,116.75364 L126.89135,132.335594 L110.3189,82.0770974 L110.3189,82.0770974 Z M144.23645,81.5700924 C147.8141,88.2287583 149.85155,95.8702338 149.85155,103.997914 C149.85155,121.246485 140.6843,136.305834 127.052,144.407514 L141.0566,103.121706 C143.6729,96.4526396 144.545,91.1199869 144.545,86.37754 C144.545,84.6563229 144.4328,83.0573071 144.23645,81.5700924 L144.23645,81.5700924 Z" id="Imported-Layers" stroke="none" fill="#FFFFFF" fill-rule="evenodd"></path>
-              </svg>
-            </span>
-            <span style="display:inline-block;vertical-align:middle;margin-left:15px;text-align:left;">
-              <h2 style="font-size:18px;margin-top:15px;margin-bottom:0px;">WordPress</h2>
-              <p style="font-size:14px;">View all WordPress Docs</p>
-            </span>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-6 col-xs-12 pio-category-container">
-        <a href="/docs/categories/drupal">
-          <div class="pio-cat-container-inner" style="padding: 10px 0;background:#1794C7;color:#fff;">
-            <span style="display:inline-block;vertical-align:middle;">
-              <svg width="80px" height="80px" viewBox="49 46 100 118" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <!-- Generator: Sketch 39 (31667) - http://www.bohemiancoding.com/sketch -->
-                <desc>Created with Sketch.</desc>
-                <defs></defs>
-                <path d="M139.023256,81.3219362 C126.437209,65.3316002 116.230233,63.9791837 109.860465,60.160596 C105.255814,57.4557631 101.034884,52.6825285 95.5860465,46 C95.2023256,49.579926 94.8186047,53.2394058 92.5930233,55.8646849 C88.1418605,61.115243 82.0023256,64.2973994 77.0906977,66.8431245 C64.5046512,73.2869912 50,88.2431264 50,112.188853 C50,123.803724 54.2976744,136.293688 62.4325581,145.840157 C71.1046512,156.102612 84.0744186,163.103356 99.5,163.023802 C113.237209,162.944248 124.595349,158.330121 133.037209,150.692946 C142.937209,141.782908 149,128.736067 149,112.188853 C148.923256,100.017105 145.469767,89.436435 139.023256,81.3219362 L139.023256,81.3219362 Z M125.132558,152.443132 C119.069767,157.69369 102.569767,160.716739 94.8186047,154.03421 C94.0511628,153.397779 94.0511628,152.363578 94.5116279,151.806701 C94.8953488,151.408931 95.2023256,151.170269 95.6627907,150.931608 C96.2,150.613392 96.9674419,150.692946 97.427907,151.170269 C100.497674,154.113764 115.07907,156.579935 123.827907,150.533838 C124.134884,150.295176 124.595349,150.136069 124.902326,150.295176 C125.132558,150.37473 125.362791,150.533838 125.362791,150.852054 C125.439535,151.329377 125.516279,152.045362 125.132558,152.443132 L125.132558,152.443132 Z M104.64186,144.487741 C104.64186,143.692202 104.872093,143.294432 105.409302,142.737555 C108.402326,139.634952 111.625581,137.805212 115.155814,137.884766 C120.834884,138.043874 121.14186,139.396291 122.753488,142.896663 C123.060465,143.612648 122.906977,144.169525 122.676744,144.567295 C122.523256,144.726403 121.909302,145.442388 121.67907,145.442388 C121.14186,145.442388 120.911628,145.203726 120.681395,144.646849 C119.3,141.146477 117.304651,141.066923 114.772093,141.066923 C110.85814,141.066923 109.093023,143.055771 106.790698,145.044618 C106.176744,145.521942 105.639535,145.919711 105.255814,145.521942 C104.948837,145.203726 104.64186,144.805957 104.64186,144.487741 L104.64186,144.487741 Z M135.262791,143.135324 C129.813953,142.737555 123.674419,129.690714 117.688372,129.770268 C109.783721,129.929375 98.1953488,143.692202 85.1488372,143.533094 C78.472093,143.45354 71.3348837,140.907815 71.1046512,130.406699 C70.9511628,121.655769 79.1627907,112.586623 89.6,112.825285 C103.490698,113.1435 110.32093,125.792572 117.304651,125.792572 C124.134884,125.872126 132.116279,114.814132 139.023256,114.655025 C142.706977,114.575471 145.546512,118.234951 145.776744,123.326401 C146.313953,131.04313 141.555814,143.692202 135.262791,143.135324 L135.262791,143.135324 Z" id="Shape" stroke="none" fill="#FFFFFF" fill-rule="evenodd"></path>
-              </svg>
-            </span>
-            <span style="display:inline-block;vertical-align:middle;margin-left:15px;text-align:left;">
-              <h2 style="font-size:18px;margin-top:15px;margin-bottom:0px;">Drupal</h2>
-              <p style="font-size:14px;">View all Drupal Docs</p>
-            </span>
-          </div>
-        </a>
-      </div>
       <div class="col-md-12 col-sm-12 col-xs-12">
         <hr>
       </div>
@@ -112,37 +112,37 @@ use:
         <div class="pio-category-container-inner" style="background:#fff">
           <h2 style="font-size:18px;margin-top:0px;text-align:center;">Top Articles</h2>
             <div style="font-size:14px;display:inline-block;text-align:left;">
-            <ul><li><a href="/docs/migrate">Migrate Sites to Pantheon</a></li>
-              <li><a href="/docs/domains">Domains and DNS</a></li>
-              <li><a href="/docs/settings-php">Configuring Settings.php</a></li>
-              <li><a href="/docs/git-faq">Git FAQs</a></li>
-              <li><a href="/docs/redis">Redis as a Caching Backend</a></li></ul>
-            </div>
-            <div style="font-size:14px;display:inline-block;text-align:left;">
               <ul><li><a href="/docs/drush">Drupal Drush Command-Line Utility</a></li>
               <li><a href="/docs/redirects">Redirect Incoming Requests</a></li>
               <li><a href="/docs/terminus">Terminus, the Pantheon CLI</a></li>
               <li><a href="/docs/pantheon-workflow">Using the Pantheon Workflow</a></li>
               <li><a href="/docs/ssh-keys">Generating and Adding SSH Keys</a></li></ul>
              </div>
+             <div style="font-size:14px;display:inline-block;text-align:left;">
+             <ul><li><a href="/docs/migrate">Migrate Sites to Pantheon</a></li>
+               <li><a href="/docs/domains">Domains and DNS</a></li>
+               <li><a href="/docs/settings-php">Configuring Settings.php</a></li>
+               <li><a href="/docs/git-faq">Git FAQs</a></li>
+               <li><a href="/docs/redis">Redis as a Caching Backend</a></li></ul>
+             </div>
            </div>
         </div>
-        <div class="col-md-6 col-xs-12 col-sm-6" style="padding-left:0px;margin-bottom:10px;">
+        <div id="cta-changelog-powerusers" class="col-md-6 col-xs-12 col-sm-6" style="padding-left:0px;margin-bottom:10px;">
           <div class="pio-category-container-inner" style="background:#EEF2F3">
             <div id="powerusers" class="col-md-6 col-xs-12 col-sm-6 pio-category-container" style="margin-bottom:10px;border-right:solid 1px #bdbdbd;">
             <h2 style="font-size:18px;margin-top:0px;margin-bottom:0px;text-align:left;">Power Users</h2>
-              <p style="font-size:14px;text-align:left;margin-bottom:0px;">A community for developers to share ideas, insights, and get Pantheon “insider info”.</p>
-              <div style="margin-top:0px;text-align:center"><a href="https://groups.google.com/a/pantheon.io/forum/#!forum/power-users" class="btn-primary btn">Join Now</a></div>
+              <p style="font-size:14px;text-align:left;margin-bottom:0px;">A community for developers to share ideas and get Pantheon “insider info”.</p>
+              <div style="margin-top:0px;text-align:left"><a href="https://groups.google.com/a/pantheon.io/forum/#!forum/power-users" class="btn-primary btn">Join Now</a></div>
             </div>
               <div class="col-md-6 col-xs-12 col-sm-6 pio-category-container" style="margin-bottom:10px;">
                 <h2 style="font-size:18px;margin-top:0px;margin-bottom:0px;text-align:left;">Contribute</h2>
                   <p style="font-size:14px;text-align:left;margin-bottom:0px;">Help us create relevant and useful content for developers like yourself.</p>
-                  <div style="margin-top:0px;text-align:center"><a href="https://github.com/pantheon-systems/documentation/blob/master/CONTRIBUTING.md" class="btn-primary btn">Learn More</a></div>
+                  <div style="margin-top:0px;text-align:left"><a href="https://github.com/pantheon-systems/documentation/blob/master/CONTRIBUTING.md" class="btn-primary btn">Learn More</a></div>
               </div>
             </div>
         </div>
       </div>
-    </div>
+  </div>
   </div>
   <div class="float-foot">
     <div style="margin-top:20px;">
