Contribute landing page - Remove contributors from dropdown menu - Add new landing page: Contribute - includes quickstart workflows - Use relative links within CTA's on homepage

--- a/source/docs.html
+++ b/source/docs.html
@@ -132,12 +132,12 @@ use:
             <div id="powerusers" class="col-md-6 col-xs-12 col-sm-6 pio-category-container" style="margin-bottom:10px;border-right:solid 1px #bdbdbd;">
             <h2 style="font-size:18px;margin-top:0px;margin-bottom:0px;text-align:left;">Power Users</h2>
               <p style="font-size:14px;text-align:left;margin-bottom:0px;">A community for developers to share ideas and get Pantheon “insider info”.</p>
-              <div style="margin-top:0px;text-align:left"><a href="https://groups.google.com/a/pantheon.io/forum/#!forum/power-users" class="btn-primary btn">Join Now</a></div>
+              <div style="margin-top:0px;text-align:left"><a href="/docs/power-users" class="btn-primary btn">Learn More</a></div>
             </div>
               <div class="col-md-6 col-xs-12 col-sm-6 pio-category-container" style="margin-bottom:10px;">
                 <h2 style="font-size:18px;margin-top:0px;margin-bottom:0px;text-align:left;">Contribute</h2>
                   <p style="font-size:14px;text-align:left;margin-bottom:0px;">Help us create relevant and useful content for developers like yourself.</p>
-                  <div style="margin-top:0px;text-align:left"><a href="https://github.com/pantheon-systems/documentation/blob/master/CONTRIBUTING.md" class="btn-primary btn">Learn More</a></div>
+                  <div style="margin-top:0px;text-align:left"><a href="/docs/contribute" class="btn-primary btn">Learn More</a></div>
               </div>
             </div>
         </div>
