New search provider: Docsearch by Algolia

--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -35,6 +35,16 @@
   window.onload = setActive;
   </script>
 
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+  <script type="text/javascript"> docsearch({
+  apiKey: '68209e7d940c2210c9a045c08838b691',
+  indexName: 'pantheon-io',
+  inputSelector: '#docsearch',
+  debug: false // Set debug to true if you want to inspect the dropdown
+  });
+  </script>
+
+
   <!-- Marketo Munchkin -->
   <script type="text/javascript">
   document.write(unescape("%3Cscript src='//munchkin.marketo.net/munchkin.js' type='text/javascript'%3E%3C/script%3E"));
