--- a/source/_partials/search_box.html
+++ b/source/_partials/search_box.html
@@ -1,16 +1,5 @@
-<script>
-(function() {
-  var cx = '016844496173863628783:moj1j4obfwm';
-  var gcse = document.createElement('script');
-  gcse.type = 'text/javascript';
-  gcse.async = true;
-  gcse.src = '//cse.google.com/cse.js?cx=' + cx;
-  var s = document.getElementsByTagName('script')[0];
-  s.parentNode.insertBefore(gcse, s);
-})();
-</script>
-  <form id="searchform" action="/docs/search" accept-charset="UTF-8" enctype="application/x-www-form-urlencoded">
+  <form id="searchform">
     <div>
-      <input type="search" placeholder="Search Pantheon Docs"value="" name="term" id="piodocsearch" autocomplete="on" />
+      <input type="search" placeholder="Search Pantheon Docs" id="docsearch" />
     </div>
   </form>
