--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -34,16 +34,22 @@
   }
   window.onload = setActive;
   </script>
-
+  <!--DocSearch JS Configuration-->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
-  <script type="text/javascript"> docsearch({
-  apiKey: '68209e7d940c2210c9a045c08838b691',
-  indexName: 'pantheon-io',
-  inputSelector: '#docsearch',
-  debug: false // Set debug to true if you want to inspect the dropdown
+  <script type="text/javascript">
+  docsearch({
+    apiKey: '68209e7d940c2210c9a045c08838b691',
+    indexName: 'pantheon-io',
+    inputSelector: '#docsearch',
+    debug: false, // Set debug to true if you want to inspect the dropdown
+    algoliaOptions: {
+      hitsPerPage: 7
+    },
+    autocompleteOptions: {
+      autoselect: false,
+    }
   });
   </script>
-
 
   <!-- Marketo Munchkin -->
   <script type="text/javascript">
